--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 }
 #container{
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 4fr 1fr;
     grid-auto-rows: minmax(100px, auto);
     background-color: #FEE715;
     height: 100vh;
