modified:   index.html 	modified:   style.css finished with the sidebar nav

--- a/style.css
+++ b/style.css
@@ -2,35 +2,48 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    
 }
 body{
-    align-items: center;
+    font-family: Verdana;
 }
 #container{
     display: grid;
-    grid-template-columns: 1fr 4fr 1fr;
-    grid-auto-rows: minmax(100px, auto);
-    background-color: #FEE715;
+    grid-gap: 10px;
+    grid-template-columns: 1fr 4fr;
+    grid-template-rows: repeat(4, 1fr);
     height: 100vh;
 }
 header{
-    grid-column: 2/3;
-    background-color: #fff;
+    background: rgb(23, 23, 148);
+    grid-column: 2/4;
+    grid-row: 1/1;
 }
-aside{
+
+sidebar{
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+    background: rgb(12, 163, 12);
     grid-column: 1/2;
-    background-color: #12f4;
-    grid-row: 1/4;
+    grid-row: 1/5;
+    text-align: center;
+}
+sidebar *{
+    color: #fff;
+    text-decoration: none;
+    list-style-type: none;
+    font-size: 20px;
+    font-weight: bold;
+}
+sidebar ul{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    
 }
 main{
-    display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(200px, 1fr) );
+    background: rgb(163, 13, 13);
     grid-column: 2/4;
-    grid-row: 2/4;
-    grid-gap: 10px;
-}
-main div{
-   padding: 10px;
-   border: 2px solid black; 
-   height: 200px;
+    grid-row: 2/5;
 }
