--- a/style.css
+++ b/style.css
@@ -45,13 +45,13 @@ header button{
     border-radius: 20px;
     padding: 10px;
     color: #fff;
-    background-color: rgb(16, 16, 122);
+    background-color: rgb(12, 163, 12);
     padding: 10px 30px;
     font-weight: bolder;
     cursor: pointer;
 }
 input{
-    background: #000;
+    background: #929191;
     width: 400px;
     height: 30px;
     border-radius: 5px;
@@ -91,7 +91,59 @@ sidebar ul{
     
 }
 main{
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: 5fr 1fr;
+    grid-template-rows: repeat(6, 1fr);
     background: rgb(163, 13, 13);
     grid-column: 2/4;
     grid-row: 2/5;
+    padding: 20px;
+}
+#projects{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: minmax(150px, auto);
+    grid-gap: 10px;
+    grid-column: 1/2;
+    grid-row: 1/7;
+    background: #fff;
+}
+
+
+
+.cards{
+    border: 2px solid black;
+    padding: 6px;
+}
+
+#announsments{
+    padding: 4px;
+    grid-row: 1/4;
+    background: #fff;
+    font-size: 10px;
+    border-radius: 3px;
+}
+
+#announsments p{
+    font-size: 15px;
+}
+
+#trending{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    background: rgb(255, 255, 255);
+    grid-row: 4/7;
+    padding: 7px;
+    border-radius: 4px;
+}
+#trending img{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
+#trending div{
+    display: flex;
+    gap: 5px;
 }
