--- a/style.css
+++ b/style.css
@@ -54,11 +54,24 @@ input{
     background: #929191;
     width: 400px;
     height: 30px;
-    border-radius: 5px;
+    border-radius: 10px;
     color: #fff;
 }
-
-img{
+#search{
+    display: flex;
+    gap: 10px;
+}
+#search img{
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+}
+#dashboard{
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+}
+#profile-image{
     height: 70px;
     width: 70px;
     border-radius: 50%;
@@ -81,7 +94,7 @@ sidebar *{
     color: #fff;
     text-decoration: none;
     list-style-type: none;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: bold;
 }
 sidebar ul{
@@ -89,6 +102,11 @@ sidebar ul{
     flex-direction: column;
     gap: 20px;
     
+}
+sidebar img{
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
 }
 main{
     display: grid;
