--- a/style.css
+++ b/style.css
@@ -51,11 +51,12 @@ header button{
     cursor: pointer;
 }
 input{
-    background: #929191;
+    background: hsla(0, 0%, 91%, 0.878);
     width: 400px;
     height: 30px;
     border-radius: 10px;
     color: #fff;
+    font-size: larger;
 }
 #search{
     display: flex;
@@ -113,7 +114,7 @@ main{
     grid-gap: 20px;
     grid-template-columns: 5fr 1fr;
     grid-template-rows: repeat(6, 1fr);
-   background-color: #929191;
+   background-color: hsla(0, 0%, 91%, 0.878);
     grid-column: 2/4;
     grid-row: 2/5;
     padding: 20px;
@@ -125,15 +126,22 @@ main{
     grid-gap: 10px;
     grid-column: 1/2;
     grid-row: 1/7;
-    background: #fff;
+    background: hsla(0, 0%, 91%, 0.878);
 }
 
-
+#projects p{
+    text-align: center;
+}
 
 .cards{
-    box-shadow: 6px 5px hsla(0, 9%, 32%, 0.966);
+    border: 2px solid #000;
+    border-radius: 5px;
     padding: 6px;
-    height: 100px;
+    height: 150px;
+    text-align: center;
+}
+.cards p{
+    text-align: left;
 }
 
 #announsments{
